k3s/manifests/authentik/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis-master
  namespace: authentik
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
